--- a/lib/components/Welcome/Welcome.css
+++ b/lib/components/Welcome/Welcome.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 15%;
+  align-items: center;
 }
 
 h1 {
@@ -21,7 +22,7 @@ input {
   opacity: 0.5;
   border: none;
   width: 300px;
-  font-size: 30px;
+  font-size: 28px;
 }
 
 button {
