--- a/lib/components/Weather/Weather.css
+++ b/lib/components/Weather/Weather.css
@@ -1,3 +1,56 @@
-body {
-  
+.weather-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  color: #FFF;
+}
+
+.location {
+  font-size: 25px;
+  padding: 10px;
+  font-weight: 200;
+}
+
+.temp-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid white;
+}
+
+.current-temp{
+  display: flex;
+  justify-content: center;
+  font-size: 45px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.high-low-container{
+  display: flex;
+  justify-content: center;
+}
+
+img{
+  width: 100px;
+  padding-bottom: 10px;
+}
+
+h4{
+  margin: 0 20px 0 20px;
+  font-size: 24px;
+  font-weight: 200;
+}
+
+
+.current-temp-span{
+  position: absolute;
+  font-size: 20px;
+  padding: 6px 0 0 5px;
+}
+span{
+  position: absolute;
+  font-size: 15px;
+  padding: 1px 0 0 3px;
 }
