--- a/lib/components/Welcome/Welcome.css
+++ b/lib/components/Welcome/Welcome.css
@@ -1,13 +1,16 @@
 .welcome-page {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 15%;
+  background-image: url('http://blog.hdwallsource.com/wp-content/uploads/2014/11/gradient-background-26046-26731-hd-wallpapers.jpg-1024x640.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 .welcome-contents {
   display: flex;
   flex-direction: column;
-  margin-top: 15%;
   align-items: center;
 }
 
