toggle welcome page

--- a/lib/components/Weather/Weather.css
+++ b/lib/components/Weather/Weather.css
@@ -4,7 +4,10 @@
   align-items: center;
   flex-direction: column;
   height: 100vh;
-  background-color: blue;
+  background-image: url('http://blog.hdwallsource.com/wp-content/uploads/2014/11/gradient-background-26046-26731-hd-wallpapers.jpg-1024x640.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
   color: #FFF;
 }
 
