--- a/lib/components/Weather/Weather.css
+++ b/lib/components/Weather/Weather.css
@@ -1,6 +1,7 @@
 .weather-container {
   display: flex;
   justify-content: center;
+  position: relative;
   align-items: center;
   flex-direction: column;
   height: 100vh;
