--- a/lib/components/Weather/Weather.css
+++ b/lib/components/Weather/Weather.css
@@ -75,7 +75,9 @@ span{
 }
 
 .hourly-container{
-  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100px;
   border: 1px solid white;
 }
