--- a/lib/components/Card/Card.css
+++ b/lib/components/Card/Card.css
@@ -1,14 +1,30 @@
-.card{
+.card-container{
   display: flex;
 }
 
-.hour,
-.icon,
-.temp{
-  display: flex;
-  justify-content: center;
-}
-section{
+section {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  border: 1px dashed pink;
+}
+
+.hour-card,
+.icon-card,
+.temp-card{
+  display: flex;
+  border: 1px dashed green;
+  justify-content: center;
+  align-items: center;
+}
+.hour-card,
+.temp-card {
+  width: 80px;
+    height: 30px;
+}
+.icon-card {
+  width: 75px;
+  height: 100px;
+  padding: 0px;
 }
