--- a/lib/components/Input/Input.css
+++ b/lib/components/Input/Input.css
@@ -29,7 +29,6 @@
 }
 
 .input2 {
-
   right: 300px;
   top: 52px;
   height: 26px;
@@ -41,7 +40,6 @@
 }
 
 .input2-btn {
-  /*display: none;*/
   height: 26px;
   margin-left: 10px;
   border-radius: 3px;
@@ -49,4 +47,17 @@
   width: 48px;
   font-size: 12px;
   border: none;
+}
+.input-error-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.error-show{
+  border: 1px dashed pink;
+  height: 100px;
+  background-color: #FFF;
+}
+.error-hide{
+  display: none;
 }
