--- a/lib/components/Input/Input.css
+++ b/lib/components/Input/Input.css
@@ -23,7 +23,7 @@
   margin-left: 10px;
   border-radius: 3px;
   background-color: #fff;
-  width: 100px;
+  width: 90px;
   font-size: 20px;
   border: none;
 }
@@ -48,16 +48,32 @@
   font-size: 12px;
   border: none;
 }
-.input-error-container{
+
+.search1 {
+  margin-top: 3px;
+   width: 40px;
+}
+
+.search2 {
+  margin-top: 2px;
+  width: 20px;
+}
+
+.input-error-container {
   display: flex;
   flex-direction: column;
 }
 
-.error-show{
-  border: 1px dashed pink;
-  height: 100px;
-  background-color: #FFF;
+.error-show {
+  height: 70px;
+  background-color: red;
 }
-.error-hide{
+
+.error-hide {
   display: none;
+}
+
+.error-text {
+  color: #fff;
+  padding: 20px;
 }
