--- a/lib/components/Input/Input.css
+++ b/lib/components/Input/Input.css
@@ -26,6 +26,7 @@
   width: 90px;
   font-size: 20px;
   border: none;
+  outline: none;
 }
 
 .input2 {
@@ -47,6 +48,7 @@
   width: 48px;
   font-size: 12px;
   border: none;
+  outline: none;
 }
 
 .search1 {
@@ -66,7 +68,9 @@
 
 .error-show {
   height: 70px;
-  background-color: red;
+  width: 134px;
+  background-color: #d61313;
+
 }
 
 .error-hide {
@@ -75,5 +79,5 @@
 
 .error-text {
   color: #fff;
-  padding: 20px;
+  padding: 10px;
 }
