make 10day cards and switch button

--- a/lib/components/Card/Card.css
+++ b/lib/components/Card/Card.css
@@ -1,30 +1,56 @@
-.card-container{
+.card-container {
   display: flex;
 }
 
-section {
+.hour-container,
+.daily-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px;
-  border: 1px dashed pink;
+  margin: 7px;
+  background: rgba(2, 15, 46, 0.2);
+
 }
 
 .hour-card,
 .icon-card,
-.temp-card{
+.temp-card,
+.day-card {
   display: flex;
-  border: 1px dashed green;
   justify-content: center;
   align-items: center;
+  font-size: 15px;
 }
+
 .hour-card,
 .temp-card {
   width: 80px;
-    height: 30px;
+  height: 30px;
 }
+
 .icon-card {
-  width: 75px;
-  height: 100px;
+  width: 65px;
+  height: 75px;
   padding: 0px;
+}
+
+.temp-area {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.day-high-temp,
+.day-low-temp {
+  width: 40px;
+  height: 30px;
+  font-size: 15px;
+}
+
+.hour-container-hide {
+  display: none
+}
+
+.daily-container-hide {
+  display: none
 }
