--- a/lib/components/Current/Current.css
+++ b/lib/components/Current/Current.css
@@ -4,3 +4,59 @@
   top: 40px;
   font-size: 20px;
 }
+
+.switch {
+  position: relative;
+  height: 26px;
+  width: 120px;
+  margin: 20px auto;
+  background: rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+}
+
+.switch-label {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 58px;
+  line-height: 26px;
+  font-size: 11px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
+  cursor: pointer;
+}
+
+.switch-input {
+  display: none;
+}
+
+.switch-selection-left {
+  position: absolute;
+  z-index: 1;
+  top: 2px;
+  left: 2px;
+  display: block;
+  width: 58px;
+  height: 22px;
+  border-radius: 3px;
+  transition: left 0.15s ease-out;
+}
+
+.switch-selection-right {
+  position: absolute;
+  z-index: 1;
+  top: 2px;
+  left: 60px;
+  display: block;
+  width: 58px;
+  height: 22px;
+  border-radius: 3px;
+  transition: left 0.15s ease-out;
+}
+
+.switch-blue .switch-selection-left,
+.switch-blue .switch-selection-right {
+  background-color: #3aa2d0;
+}
