--- a/lib/components/Card/Card.css
+++ b/lib/components/Card/Card.css
@@ -2,6 +2,13 @@
   display: flex;
 }
 
+.card-contents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .hour-container,
 .daily-container {
   display: flex;
@@ -9,7 +16,6 @@
   align-items: center;
   margin: 7px;
   background: rgba(2, 15, 46, 0.2);
-
 }
 
 .hour-card,
@@ -23,7 +29,8 @@
 }
 
 .hour-card,
-.temp-card {
+.temp-card,
+.day-card {
   width: 80px;
   height: 30px;
 }
@@ -42,6 +49,9 @@
 
 .day-high-temp,
 .day-low-temp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   height: 30px;
   font-size: 15px;
