--- a/lib/components/Current/Current.css
+++ b/lib/components/Current/Current.css
@@ -1,4 +1,4 @@
-.logo{
+.logo {
   position: absolute;
   left: 70px;
   top: 40px;
@@ -59,4 +59,66 @@
 .switch-blue .switch-selection-left,
 .switch-blue .switch-selection-right {
   background-color: #3aa2d0;
+}
+
+.location {
+  font-size: 30px;
+  padding: 10px 0 45px 0;
+  font-weight: 200;
+}
+
+.temp-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 465px;
+  width: 100vw;
+}
+
+.current-temp {
+  display: flex;
+  justify-content: center;
+  font-size: 80px;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+.high-low-container {
+  display: flex;
+  justify-content: center;
+}
+
+img {
+  width: 170px;
+  padding-bottom: 10px;
+}
+
+h4 {
+  margin: 0 30px 0 30px;
+  font-size: 35px;
+  font-weight: 200;
+  padding-bottom: 30px;
+}
+
+.current-temp-span {
+  position: absolute;
+  font-size: 20px;
+  padding: 6px 0 0 5px;
+}
+
+span {
+  position: absolute;
+  font-size: 15px;
+  padding: 1px 0 0 3px;
+}
+
+.current-day {
+  font-weight: 200;
+  padding-bottom: 15px;
+}
+
+.current-blurb {
+  font-weight: 200;
+  font-size: 18px;
+  padding-bottom: 15px;
 }
