--- a/lib/components/Weather/Weather.css
+++ b/lib/components/Weather/Weather.css
@@ -8,6 +8,10 @@
   background-image: url('http://blog.hdwallsource.com/wp-content/uploads/2014/11/gradient-background-26046-26731-hd-wallpapers.jpg-1024x640.png');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
   color: #FFF;
+}
+
+.hourly-container {
+  width: 90%;
+  overflow-y: scroll;
 }
